# adminmcp

./: .gitignore  ARCHITECTURE.md  DESIGN.md  LICENSE  PROJECT.md  PROJECT_PROGRESS.md  README.md  SPECIFICATION.md  acp  config.adminmcp.json  pyproject.toml  requirements.txt
src/acp/: __init__.py  config.py  main.py
src/acp/client/: __init__.py  api.py  cli.py  executor.py  llm.py  state.py
src/acp/common/: __init__.py  models.py  utils.py
src/acp/server/: __init__.py  app.py  core.py  prompts.py  routes.py  tools.py
src/adminmcp/: agent_runner.py  cli.py  logging_config.py  main.py  server.py  server_runner.py
src/adminmcp/core/: ipc.py  security.py  shell_agent.py  tui.py
src/adminmcp/server/: acp_server.py
src/adminmcp/tools/: system.py
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_common.py  test_integration.py  test_ipc.py  test_llm.py  test_security.py  test_server.py  test_shell_agent.py  test_system_tools.py
